# fairy-render

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  react-config.json  solid-config.json  vite-config.json
fairy-axum/: Cargo.toml
fairy-http/: Cargo.toml
fairy-http/examples/: axum.rs
fairy-http/src/: config.rs  dev.rs  lib.rs  render.rs  service.rs  template.rs
fairy-render/: Cargo.toml  package.json  rollup.config.js  tsconfig.json
fairy-render/examples/: fairy.rs
fairy-render/src/: fairy.rs  lib.rs  renderer.rs  utils.rs  vite.rs
fairy-render/src/quick/: globals.js  mod.rs  renderer.rs
fairy-render/srcjs/: events.js  inherits.js  stream.js  util.js
fairy-vite/: Cargo.toml
fairy-vite/src/: config.rs  error.rs  fairy.rs  lib.rs  result.rs  util.rs  vite.rs  vite_options.rs  vite_resolver.rs
