[package]
name = "fairy-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
fairy-http = { path = "../fairy-http" }
fairy-render = { path = "../fairy-render", features = ["reqwest"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
markup = { version = "0.15" }
tower-http = { version = "0.5", features = ["fs"] }
futures = { version = "0.3" }
