[package]
name = "fairy-http"
version = "0.1.0"
edition = "2021"

[dependencies]
reggie = { git = "https://github.com/fairy-render/reggie", features = ["json"] }

tower-service = { version = "0.3" }
tower-http = { version = "0.5", features = ["fs"] }
tower = { version = "0.4", features = ["steer"] }
tower-layer = { version = "0.3" }
fairy-render = { path = "../fairy-render" }

axum = { version = "0.7", default-features = false }
markup = { version = "0.15" }

serde = { version = "1", feeatures = ["serde"] }
