[package]
name = "fairy-http"
version = "0.1.0"
edition = "2021"

[dependencies]
reggie = { git = "https://github.com/fairy-render/reggie", features = ["json"] }

tower-service = { version = "0.3" }
tower-http = { version = "0.5", features = ["fs"] }
tower = { version = "0.4", features = ["steer"] }
tower-layer = { version = "0.3" }
fairy-render = { path = "../fairy-render" }
axum = { version = "0.7", default-features = false }
serde = { version = "1", feeatures = ["serde"] }


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
markup = { version = "0.15" }
futures = { version = "0.3" }
axum = { version = "0.7", default-features = true }
fairy-render = { path = "../fairy-render", features = ["reqwest"] }
