[package]
name = "fairy-http"
version = "0.1.0"
edition = "2021"

[dependencies]
reggie = { git = "https://github.com/fairy-render/reggie", features = ["json"] }

tower-service = { version = "0.3" }
tower-http = { version = "0.6", features = ["fs"] }
tower = { version = "0.5", features = ["steer"] }
tower-layer = { version = "0.3" }
fairy-render = { path = "../fairy-render" }
fairy-vite = { path = "../fairy-vite" }
axum = { version = "0.7", default-features = false }
serde = { version = "1", features = ["derive"] }


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
markup = { version = "0.15" }
futures = { version = "0.3" }
axum = { version = "0.7", default-features = true }
fairy-render = { path = "../fairy-render" }
reqwest = { version = "0.12" }
reggie = { git = "https://github.com/fairy-render/reggie", features = [
  "json",
  "reqwest",
] }
