[package]
name = "fairy-render"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
reggie = { git = "https://github.com/fairy-render/reggie", features = ["json"] }
futures = { version = "0.3", default-features = false }
relative-path = { version = "1" }
klaver = { git = "https://github.com/fairy-render/klaver", features = [
  "pool",
  "http",
  "encoding",
  "crypto",
] }
klaver-wintercg = { git = "https://github.com/fairy-render/klaver" }
rquickjs = { version = "0.8" }


[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["fs", "macros"] }
reggie = { git = "https://github.com/fairy-render/reggie", features = [
  "json",
  "reqwest",
] }
tracing-subscriber = "*"


[[example]]
name = "fairy"
path = "examples/fairy.rs"
required-features = []
