[package]
name = "fairy-vite"
version = "0.1.0"
edition = "2021"

[dependencies]
fairy-render = { path = "../fairy-render", features = [] }
thiserror = { version = "1" }

serde = { version = "1", feeatures = ["serde"] }
serde_json = { version = "1" }
tokio = { version = "1", default-features = false, features = ["fs"] }
reggie = { git = "https://github.com/fairy-render/reggie", features = ["json"] }
relative-path = { version = "1" }
